
* SOLR-17211: New SolrJ JDK client supports Async (James Dyer)

* SOLR-17204: REPLACENODE now supports the source node not being live (Vincent Primault)

* SOLR-14763: Add a CompletableFuture based asynchronous API to Http2SolrClient, HttpJdkSolrClient and LBHttp2SolrClient.
  The previous asynchronous API is deprecated. (Rishi Sankar, James Dyer)

Optimizations
---------------------
* SOLR-17144: Close searcherExecutor thread per core after 1 minute (Pierre Salagnac, Christine Poerschke)

* GITHUB#2217: Scale to 10K+ collections better in ZkStateReader.refreshCollectionsList (David Smiley)


Bug Fixes
---------------------
* SOLR-17153: CloudSolrClient could fail a request immediately following a collection creation.  Required double-checking the collection doesn’t exist. (Aparna Suresh via David Smiley)

* SOLR-17152: Better alignment of Admin UI graph (janhoy)

* SOLR-17148: Fixing Config API overlay property enabling or disabling the cache (Sanjay Dutt, hossman, Eric Pugh)

* PR#2320: Avoid NullPointerException in SolrJ client due to missing
  EnvToSyspropMappings.properties file (janhoy)

* SOLR-17186: Streaming query breaks if token contains backtick (Rahul Goswami via Eric Pugh)

* SOLR-17197: Fix getting fieldType by its name in FileBasedSpellChecker (Andrey Bozhko via Eric Pugh)

* SOLR-17198: AffinityPlacementFactory can fail if Shard leadership changes occur while it is collecting metrics.
  (Paul McArthur)

* SOLR-17018: Add QueryLimits support to Learning To Rank rescoring.
    (Alessandro Benedetti)

* SOLR-14892: Queries with shards.info and shards.tolerant can yield multiple null keys in place of shard names
  (Mathieu Marie, David Smiley)

* SOLR-17110: Fixed JacksonJsonWriter to properly quote uuid values in json query response (Andrey Bozhko via Eric Pugh)

* SOLR-17209: Fix NullPointerException in QueryComponent (Vincent Primault via Eric Pugh)
